# richmiles.xyz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-entrypoint.sh  index.html  vite.config.ts
.github/workflows/: build.yml  ci.yml  ephemeral-staging.yml  promote-production.yml
backend/: __init__.py  config.py  main.py  pyproject.toml
backend/content/: experience.json  profile.json  project_icons.json  projects_fallback.json
backend/tests/: __init__.py  test_api.py
public/: styles.css
public/css/: carousel.css
src/: App.tsx
src/components/: Contact.tsx  ExperienceTimeline.tsx  Hero.test.tsx  Hero.tsx
src/data/: projects.ts
