[project]
name = "richmiles-xyz-backend"
version = "0.1.0"
description = "richmiles.xyz backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
